<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="pref_swipe_instruc">pref_swipe_instruc</string>
    <string name="pref_tap_instruc">pref_tap_instruc</string>
    <string name="pref_key_selected_channels">pref_key_selected_channels</string>
	<string name="app_name">yTuner</string>
	<string name="ok">Ok</string>
	<string name="cancel">Cancel</string>
	<string name="loading_video">loading...</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>
    <string name="swipe_left">Swipe left</string>
    <string name="retry">Retry</string>
    <string name="exit_app">Exit App</string>
    <string name="check_settings">Check Settings</string>
    <string name="wifi_desconn_warning">Warning: You are NOT connected to Wi-Fi.</string>
    <string name="close_app_feedback">Why do you exit?:</string>
    <string-array name="close_app_feedback_values">
    	<item>App is ok, just closing it</item>		
		<item>Don\'t like the App</item>
		<item>Don\'t like the videos</item>
		<item>Needs more channels</item>
		<item>App is buggy</item>
		<item>App didn\'t load</item>			
		<item>Don\'t understand App</item>		
		<item>Not what I\'m looking for</item>
		<item>I closed it by mistake</item>		
		<item>Other</item>
    </string-array>
    <string name="close_app_comment">Any Comment?:</string>
    <string name="close_app_suggestion">Any suggestion?:</string>
    <string name="close_app_videos">What videos you\'d like?:</string>
    <string name="close_app_channel">What channels you\'d like?</string>
    <string name="close_app_comment_send">Send / Close</string>
    <string name="close_app_rateus">Can you rate us?</string>
    <string name="close_app_rateus_desc">Please, please, rate us on Google Play Store!, its very important for us. By giving us your support you give us the strengh to go on; add more features, channels, videos and improve the app. Its just a second.</string>
    <string name="thanks_bye">Thanks, Bye!</string>
    <string name="no_internet_conn">No Internet connection</string>
    <string name="no_internet_conn_desc">There is no internet connection. Please check your connection settings.</string>
    <string name="app_update_notify">Download Update?</string>
    <string name="app_update_notify_desc">There is an update available. Please download update from Google Play Store, otherwise yTuner might not work correctly.</string>
    <string name="option_locked">Option Locked!</string>
    <string name="option_locked_desc">To unlock this uption please share this app with a friend using any of your favorite apps(WhatsApp, gmail, facebook, etc)</string>
    <string name="social_feedback">We want to hear you!</string>
    <string name="social_feedback_desc">Do you have any comment or any YouTube channel/video that you\'d like to be on yTuner? Please write to us through Facebook, Google+ or Google Play.</string>
    <string name="social_feedback_facebook">Facebook</string>
    <string name="social_feedback_plus">Google+</string>
    <string name="social_feedback_play">Google Play</string>
    <string name="server_conn_error">Server connection error</string>
    <string name="server_conn_error_desc">There was an error trying to connect to the server. You can retry or exit and open the app again.</string>
    <string name="load_video_error">Error loading video</string>
    <string name="load_video_error_desc">There has been too many errors consecutively trying to load the videos, there might be some problem with your device. You can either retry or exit and open the app again.</string>
    <string name="crash_toast_text">Ooooops, something went wrong! App development has been notified, please come back in few days!</string>
	<string name="pref_title_general">General</string>
    <string name="pref_title_random_start">Random Start</string>
    <string name="pref_summary_random_start">Starts playing long videos at a random time</string>
    <string name="pref_title_content_language">Language</string>
    <string name="pref_summary_content_language">Main spoken Language of videos</string>
    <string name="pref_default_content_language">WW</string>
    <string-array name="pref_entries_content_language">
    	<item>AUTOMATIC</item>		
		<item>ENGLISH</item>		
		<item>ESPAÑOL (SPANISH)</item>		
    </string-array>
    <string-array name="pref_values_content_language">
		<item>WW</item>		
		<item>EN</item>
		<item>ES</item>		 
    </string-array>
    <string name="pref_title_default_quality">Default quality</string>
    <string name="pref_summary_default_quality">Default video quality</string>
    <string name="pref_default_default_quality">low</string>
    <string-array name="pref_entries_default_quality">
     	
     	<item>Low</item>
        <item>Medium</item>
        
    </string-array>
    <string-array name="pref_values_default_quality">
       
       <item>low</item>
       <item>medium</item>
       
    </string-array>
    <string name="pref_title_moderator_code">Moderator Code</string>
    <string name="pref_summary_moderator_code">Enter your moderator code</string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_contact">Contact Us</string>
    <string name="pref_summary_contact">Give us your comments, suggestions or any question</string>
    <string name="pref_title_facebook_page">Facebook FanPage</string>
    <string name="pref_title_plus_page">Google Plus FanPage</string>
    <string name="pref_title_rateus">Rate us on Google Play</string>
    <string name="pref_title_version">Version</string>
    <string name="event_videoCategory">Videos</string>
    <string name="event_videoGoNext">Go Next</string>
    <string name="event_videoChangeNext">Change Next</string>
    <string name="event_videoChangePrevious">Change Previous</string>
    <string name="event_videoPlay">Play</string>
    <string name="event_videoPause">Pause</string>
    <string name="event_videoSeekBar">Update Seekbar</string>
    <string name="event_videoWatching">Watching Video</string>
    <string name="event_configCategory">Configuration</string>
    <string name="event_configChannelGuide">Show Channel Guide</string>
    <string name="event_configSettings">Show Settings</string>
    <string name="event_configShowMenu">Show Menu</string>
    <string name="event_configHideMenu">Hide Menu</string>
    <string name="event_socialCategory">Social</string>
    <string name="event_socialShareVideo">Share Video</string>
    <string name="event_socialShareUnlockCancel">Share Unlock App Cancel</string>
    <string name="event_socialShareUnlockOk">Share Unlock App Ok</string>
    <string name="event_socialFeedbackFacebook">Social Feedback Facebook</string>
    <string name="event_socialFeedbackPlus">Social Feedback Plus</string>
    <string name="event_socialFeedbackPlay">Social Feedback Play</string>
</resources>