<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  
     
	          <CheckBoxPreference
		        android:key="pref_key_random_start"
		        android:title="@string/pref_title_random_start"
		        android:summary="@string/pref_summary_random_start"
		    	android:entries="@array/pref_entries_content_language"
		        android:entryValues="@array/pref_values_content_language"
		        android:defaultValue="@string/pref_default_content_language" />   
		         
		     <ListPreference		        
		        android:key="pref_key_content_language"
		        android:title="@string/pref_title_content_language"
		        android:summary="@string/pref_summary_content_language"
		        android:dialogTitle="@string/pref_title_content_language"
		        android:entries="@array/pref_entries_content_language"
		        android:entryValues="@array/pref_values_content_language"
		        android:defaultValue="@string/pref_default_content_language" />     
		    
  
    
</PreferenceScreen>